data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2061.wast
;; 1. **Test Description:** Verify that when an out-of-bounds operand is provided to the `br_table` instruction, the execution should jump to the default label, ensuring the default label is resolved correctly.    - **Constraint Checked:** Ensures that the default label is correctly used when the operand exceeds the label vector length.    - **Relation to Incorrect Branch Target Resolution:** Incorrect resolution could cause the branch to an invalid or unintended target.

(assert_invalid
  (module (func $out-of-bounds-default
    (block (block (block 
      (br_table 0 1 2 (i32.const 3))
    )))
  ))
  "unknown label"
)